--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   "scripts": {
     "development": "NODE_ENV=development next",
     "build": "NODE_ENV=production next build",
-    "start": "yarn run build; NODE_ENV=production next start -p=$PORT"
+    "start": "yarn run build; NODE_ENV=production next start -p=3000"
   }
 }
